2008-08-11  Ralf Angeli  <angeli@caeruleus.net>

	* gnus-art.el (gnus-article-next-page): Respect `scroll-margin' when
	moving point to the bottom of the window in order to avoid recentering.

2008-08-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Bind scroll-margin for XEmacs 21.4 and SXEmacs.

	* gnus-art.el (gnus-article-next-page, gnus-article-prev-page)
	(gnus-article-next-page-1): Use compiler directive (featurep 'xemacs).
	(gnus-article-beginning-of-window): Fix calculation.

2008-08-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-summary-supersede-article)
	(gnus-summary-resend-message-edit): Bind mail-parse-charset to the
	value of gnus-newsgroup-charset to decode non-MIME encoded text in
	message header.

2008-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2104.el (rfc2104-string-make-unibyte): Define it as a compiler
	macro.
	(rfc2104-hash): Use it.

2008-07-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-sort-by-most-recent-number)
	(gnus-summary-sort-by-most-recent-date): New commands.
	(gnus-summary-mode-map, gnus-summary-make-menu-bar): Add key bindings
	and menu entries.

2008-07-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-summary-save-in-pipe): Generate work buffer always;
	don't redisplay article for raw contents; remove plural articles stuff.

	* gnus-sum.el (gnus-summary-pipe-output): Pipe raw articles by symbolic
	prefix `r'; use gnus-summary-save-in-pipe directly instead of relying
	on gnus-summary-save-article; display results properly.

2008-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: No need to fbind ns-focus-frame.

2008-07-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-summary-save-in-pipe): Add optional argument `raw'.

2008-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-summary-save-in-pipe): Consider
	gnus-save-all-headers.

2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* gnus-util.el (ns-focus-frame): Remove declaration.