@@ -1,3 +1,10 @@
+2008-08-21  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* gnus-registry.el (gnus-registry-max-track-groups): New variable to
+	prevent tracking too many groups.
+	(gnus-registry-split-fancy-with-parent, gnus-registry-fetch-groups):
+	Use it.
+
 2008-08-11  Ralf Angeli  <angeli@caeruleus.net>
 
 	* gnus-art.el (gnus-article-next-page): Respect `scroll-margin' when
